Реализована отправка данных с форм.

--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
 
     <script src="./dist/js/bundle.js"></script>
     <script src="./js/main.js"></script>
-
+    <!-- <script src="./js/script.js"></script> -->
 
 </body>
 
