--- a/index.html
+++ b/index.html
@@ -763,11 +763,11 @@
                                 <div class="description1">Часов</div>
                             </div>
                             <div class="numbers1">
-                                <div id="minutes"><span>33</span></div>
+                                <div><span id="minutes">33</span></div>
                                 <div class="description1">Минут</div>
                             </div>
                             <div class="numbers1">
-                                <div id="seconds"><span>44</span></div>
+                                <div><span id="seconds">44</span></div>
                                 <div class="description1">Секунд</div>
                             </div>
                         </div>
