--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
     </script>
 
     <script src="./dist/js/bundle.js"></script>
-    <script src="./js/main.js"></script>
+    <!-- <script src="./js/main.js"></script> -->-->
     <!-- <script src="./js/script.js"></script> -->
 
 </body>
