--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     <div class="header_btn_wrap">
                         <div class="header_btn_wrap_block">
                             <button class="header_btn text-uppercase text-left popup_engineer_btn">
-                   Вызвать <br>замерщика
-               </button>
+                                Вызвать <br>замерщика
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -360,7 +360,8 @@
             <!-- Slider -->
             <div class="decoration_slider">
                 <div class="decoration_item wow fadeInUp">
-                    <div class="internal_link decoration_link no_click after_click"><a class="decoration_link_a">Внутренняя отделка</a></div>
+                    <div class="internal_link decoration_link no_click after_click"><a class="decoration_link_a">Внутренняя
+                            отделка</a></div>
                 </div>
                 <div class="decoration_item wow fadeInUp" data-wow-delay="0.1s">
                     <div class="external_link decoration_link no_click"><a class="decoration_link_a">Внешняя отделка</a></div>
@@ -427,9 +428,12 @@
                         <div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
                             <form class="form main_form decoration_form" action="#">
                                 <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
-                                <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                                <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
-                                <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
+                                <input class="form-control form_input" name="user_name" required type="text"
+                                    placeholder="Введите ваше имя">
+                                <input class="form-control form_input" name="user_phone" required type="text"
+                                    placeholder="Введите телефон">
+                                <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать
+                                    замерщика!</button>
                                 <p class="form_notice">Ваши данные конфиденциальны</p>
                             </form>
                         </div>
@@ -486,9 +490,12 @@
                         <div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
                             <form class="form main_form decoration_form" action="#">
                                 <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
-                                <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                                <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
-                                <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
+                                <input class="form-control form_input" name="user_name" required type="text"
+                                    placeholder="Введите ваше имя">
+                                <input class="form-control form_input" name="user_phone" required type="text"
+                                    placeholder="Введите телефон">
+                                <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать
+                                    замерщика!</button>
                                 <p class="form_notice">Ваши данные конфиденциальны</p>
                             </form>
                         </div>
@@ -538,9 +545,12 @@
                         <div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
                             <form class="form main_form decoration_form" action="#">
                                 <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
-                                <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                                <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
-                                <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
+                                <input class="form-control form_input" name="user_name" required type="text"
+                                    placeholder="Введите ваше имя">
+                                <input class="form-control form_input" name="user_phone" required type="text"
+                                    placeholder="Введите телефон">
+                                <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать
+                                    замерщика!</button>
                                 <p class="form_notice">Ваши данные конфиденциальны</p>
                             </form>
                         </div>
@@ -597,9 +607,12 @@
                         <div class="col-lg-4 col-lg-offset-0 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
                             <form class="form main_form decoration_form" action="#">
                                 <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
-                                <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                                <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
-                                <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
+                                <input class="form-control form_input" name="user_name" required type="text"
+                                    placeholder="Введите ваше имя">
+                                <input class="form-control form_input" name="user_phone" required type="text"
+                                    placeholder="Введите телефон">
+                                <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать
+                                    замерщика!</button>
                                 <p class="form_notice">Ваши данные конфиденциальны</p>
                             </form>
                         </div>
@@ -635,25 +648,32 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.1s">
-                    <a class="big_img_link" href="img/our_works/big_img/2.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img class="workImage" src="img/our_works/2.png" alt=""></a>
+                    <a class="big_img_link" href="img/our_works/big_img/2.png"><img class="lupa" src="img/our_works/zoom-in.png"
+                            alt=""><img class="workImage" src="img/our_works/2.png" alt=""></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.2s">
-                    <a class="big_img_link" href="img/our_works/big_img/3.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img class="workImage" src="img/our_works/3.png" alt=""></a>
+                    <a class="big_img_link" href="img/our_works/big_img/3.png"><img class="lupa" src="img/our_works/zoom-in.png"
+                            alt=""><img class="workImage" src="img/our_works/3.png" alt=""></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.3s">
-                    <a class="big_img_link" href="img/our_works/big_img/4.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img class="workImage" src="img/our_works/4.png" alt=""></a>
+                    <a class="big_img_link" href="img/our_works/big_img/4.png"><img class="lupa" src="img/our_works/zoom-in.png"
+                            alt=""><img class="workImage" src="img/our_works/4.png" alt=""></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.4s">
-                    <a class="big_img_link" href="img/our_works/big_img/5.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img class="workImage" src="img/our_works/5.png" alt=""></a>
+                    <a class="big_img_link" href="img/our_works/big_img/5.png"><img class="lupa" src="img/our_works/zoom-in.png"
+                            alt=""><img class="workImage" src="img/our_works/5.png" alt=""></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.5s">
-                    <a class="big_img_link" href="img/our_works/big_img/6.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img class="workImage" src="img/our_works/6.png" alt=""></a>
+                    <a class="big_img_link" href="img/our_works/big_img/6.png"><img class="lupa" src="img/our_works/zoom-in.png"
+                            alt=""><img class="workImage" src="img/our_works/6.png" alt=""></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.6s">
-                    <a class="big_img_link" href="img/our_works/big_img/7.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img class="workImage" src="img/our_works/7.png" alt=""></a>
+                    <a class="big_img_link" href="img/our_works/big_img/7.png"><img class="lupa" src="img/our_works/zoom-in.png"
+                            alt=""><img class="workImage" src="img/our_works/7.png" alt=""></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.7s">
-                    <a class="big_img_link" href="img/our_works/big_img/8.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img class="workImage" src="img/our_works/8.png" alt=""></a>
+                    <a class="big_img_link" href="img/our_works/big_img/8.png"><img class="lupa" src="img/our_works/zoom-in.png"
+                            alt=""><img class="workImage" src="img/our_works/8.png" alt=""></a>
                 </div>
             </div>
         </div>
@@ -927,24 +947,24 @@
                 <h2>Калькулятор</h2>
                 <h3>Выберите тип остекления <br>и его профиль</h3>
                 <select class="form-control" name="view" id="view_type">
-                   <option value="tree">Деревянное остекление</option>
-                   <option value="aluminum">Алюминиевое остекление</option>
-                   <option value="plastic">Остекление пластиковыми рамами</option>
-                   <option value="french">Панорамное остекление</option>
-                   <option value="overhang">Остекление с выносом</option>
-                 </select>
+                    <option value="tree">Деревянное остекление</option>
+                    <option value="aluminum">Алюминиевое остекление</option>
+                    <option value="plastic">Остекление пластиковыми рамами</option>
+                    <option value="french">Панорамное остекление</option>
+                    <option value="overhang">Остекление с выносом</option>
+                </select>
                 <img src="img/modal_calc/icon_cold.png" alt="">
                 <label>
-                     <input class="checkbox" type="checkbox" name="checkbox-test">
-                     <span class="checkbox-custom" id="cold"></span>
-                     <span class="label">Холодное</span>
-                 </label>
+                    <input class="checkbox" type="checkbox" name="checkbox-test">
+                    <span class="checkbox-custom" id="cold"></span>
+                    <span class="label">Холодное</span>
+                </label>
                 <img src="img/modal_calc/icon_warm.png" alt="">
                 <label>
-                     <input class="checkbox" type="checkbox" name="checkbox-test">
-                     <span class="checkbox-custom" id="warm"></span>
-                     <span class="label">Теплое</span>
-                 </label>
+                    <input class="checkbox" type="checkbox" name="checkbox-test">
+                    <span class="checkbox-custom" id="warm"></span>
+                    <span class="label">Теплое</span>
+                </label>
 
                 <button class="button popup_calc_profile_button">Далее</button>
             </div>
@@ -958,9 +978,12 @@
                 <div class="popup_form">
                     <form class="form" action="#">
                         <h2>Спасибо за обращение! <br>Оставьте свои данные</h2>
-                        <input class="form-control form_input" id="user_name" name="user_name" required type="text" placeholder="Введите ваше имя">
-                        <input class="form-control form_input" id="user_phone" name="user_phone" required type="text" placeholder="Введите телефон">
-                        <button class="text-uppercase btn-block button" name="submit" type="submit">Рассчитать стоимость</button>
+                        <input class="form-control form_input" id="user_name" name="user_name" required type="text"
+                            placeholder="Введите ваше имя">
+                        <input class="form-control form_input" id="user_phone" name="user_phone" required type="text"
+                            placeholder="Введите телефон">
+                        <button class="text-uppercase btn-block button" name="submit" type="submit">Рассчитать
+                            стоимость</button>
                         <p class="form_notice">Перезвоним в течение 10 минут</p>
                     </form>
                 </div>
@@ -973,7 +996,7 @@
     <script src="slick/slick.min.js"></script>
     <!-- Initialize modal, sliders -->
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('.glazing_slider').slick({
                 infinite: true,
                 slidesToShow: 5,
@@ -1046,7 +1069,7 @@
     </script>
 
     <script src="./dist/js/bundle.js"></script>
-    <!-- <script src="./js/main.js"></script> -->-->
+    <!-- <script src="./js/main.js"></script> -->
     <!-- <script src="./js/script.js"></script> -->
 
 </body>
