--- a/index.html
+++ b/index.html
@@ -955,13 +955,13 @@
                 </select>
                 <img src="img/modal_calc/icon_cold.png" alt="">
                 <label>
-                    <input class="checkbox" type="checkbox" name="checkbox-test">
+                    <input class="checkbox" type="checkbox" name="checkbox-test" data-describe="Холодное">
                     <span class="checkbox-custom" id="cold"></span>
                     <span class="label">Холодное</span>
                 </label>
                 <img src="img/modal_calc/icon_warm.png" alt="">
                 <label>
-                    <input class="checkbox" type="checkbox" name="checkbox-test">
+                    <input class="checkbox" type="checkbox" name="checkbox-test" data-describe="Теплое">
                     <span class="checkbox-custom" id="warm"></span>
                     <span class="label">Теплое</span>
                 </label>
